syntax = "proto3";

package testclient;

message HelloRequest {
  string request = 1;
}

message HelloResponse {
  string response = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}